# pytest-xvfb

./: .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  appveyor.yml  pyproject.toml  pytest.ini  pytest_xvfb.py  setup.py  tox.ini
.github/workflows/: main.yml
tests/: test_qtwe_xio_error.py  test_xvfb.py  test_xvfb_windows.py
