[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-xvfb"
version = "3.0.0"
authors = [{name = "Florian Bruhin", email = "me@the-compiler.org"}]
maintainers = [{name = "Florian Bruhin", email = "me@the-compiler.org"}]
license = {text = "MIT"}
description = "A pytest plugin to run Xvfb (or Xephyr/Xvnc) for tests."
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = ["pytest>=2.8.1", "pyvirtualdisplay>=1.3"]

[project.urls]
Homepage = "https://github.com/The-Compiler/pytest-xvfb"

[project.entry-points]
pytest11 = {xvfb = "pytest_xvfb"}

[tool.setuptools]
py-modules = ["pytest_xvfb"]
include-package-data = false
